--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
+</head>
+<body>
+<div class="container">
+    <h2>QR Code Genrator</h2>
+    <p>Enter your text or URL</p>
+    <input type="text" placeholder="Text or URL" id="qrtext">
+    <div id="imgbox">
+        <img src="" alt="" id="qr-img">
+    </div>
+    <button onclick="generateQr()">Generate</button>
+</div>
+
+
+    <script src="script.js">
+    </script>
+</body>
+</html>
